# compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bnf  bnf.txt  exception.h  main.cpp  run-gen.sh
assembler/: generator.cpp  generator.h  opcode.cpp  opcode.h
node/: astnode.h  forward-node.h  node.cpp  node.h  symbol.cpp  symbol_fun.h  symbol_type.h  symbol_var.h  table_symbol.h
parser/: astnode.h  node.cpp  node.h  parser.cpp  parser.h  printf_visitor.cpp  semantic_decl.cpp  semantic_decl.h  symbol.cpp  symbol.h  symbol_fun.h  symbol_type.h  symbol_var.h  table_symbol.h  type_checker.cpp  type_checker.h  visitor.cpp  visitor.h  visitor_type.cpp  visitor_type.h
tests/: run_tests.py
tests/asm/: 001_BinOperator.ans  001_BinOperator.in  002_IntOperator.in  003_IntOperator.in  004_DoubleOperator.ans  005_WriteString.ans  005_WriteString.in  006_SimpleAssigment.ans  006_SimpleAssigment.in  008_CmpDouble.in  009_CmpInt.in  010_While  010_While.ans  010_While.in  011_At.ans  011_At.in  012_If.in  013_IntOperation.in  014_For.in  015_RecordAccess.ans  015_RecordAccess.in  016_PointerRecord.ans  016_PointerRecord.in  017_If.in  018_Assigment  018_Assigment.ans  018_Assigment.in  020_Array.ans  020_Array.in  021_ArrayRecord.ans  021_ArrayRecord.in  022_Array.ans  022_Array.in  023_Record.in  024_Record.ans  024_Record.in  025_Pointer.ans  025_Pointer.in  026_Pointer.ans  026_Pointer.in  (+46 more)
tests/lexer/: 001.ans  001.in  001_int.ans  002.in  002_identifier.ans  003_keyword.ans  003_keyword.in  004.in  004_double.ans  005_bracket.ans  005_bracket.in  006_if.ans  006_if.in  007.ans  007.in  007_operator.ans  008.ans  008_doubleDot.ans  008_doubleDot.in  009.ans  009_separator.ans  009_separator.in  010.in  010_caseSensitive.ans  011.ans  011.in  011_overrideKeyword.ans  012.ans  012.in  012_operators.ans  013.ans  013_shift.ans  013_shift.in  014.ans  014.in  014_operators.ans  015_string.ans  015_string.in  016_comment.ans  016_comment.in  (+31 more)
tests/parser/: 001_sumPlus.ans  001_sumPlus.in  003_sumPlus.ans  003_sumPlus.in  004_sumPlus.ans  004_sumPlus.in  005_TwoPresedent.in  005_TwoPriority.ans  006_TwoPresedent.ans  006_TwoPriority.in  007_TwoPresedent.ans  007_TwoPriority.in  008_TwoPresedent.ans  008_TwoPriority.in  009_TwoPresedent.ans  009_TwoPresedent.in  010_TwoPresedent.ans  010_TwoPriority.in  011_TwoPriority.ans  011_TwoPriority.in  012_TwoPresedent.in  012_TwoPriority.ans  013_TwoPresedent.ans  014_TwoPresedent.ans  014_TwoPresedent.in  015_IllegalExpression.ans  016_IllegalExpression.ans  017.in  017_IllegalExpression.ans  018_IllegalExpression.ans  018_IllegalExpression.in  019_IllegalExpression.ans  020_Unary.ans  021_Unary.in  022_Unary.ans  022_Unary.in  023_LogicalOperator.ans  023_LogicalOperator.in  (+33 more)
tokenizer/: lexer.cpp  lexer.h  lexerBuffer.cpp  lexerBuffer.h  lexer_exception.h  state.cpp  state.h  state_table.h  token.cpp  token.h  token_type.cpp  token_type.h
(+330 files in other folders)
